// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Github should handle FETCH_POPULAR_REPOS_FAILURE 1`] = `
Object {
  "popularRepos": Object {
    "data": Array [],
    "error": true,
    "isLoading": false,
    "isReady": false,
    "message": "ajax error 404",
    "status": 404,
  },
  "rehydrated": false,
}
`;

exports[`Github should handle FETCH_POPULAR_REPOS_REQUEST 1`] = `
Object {
  "popularRepos": Object {
    "data": Array [],
    "error": false,
    "isLoading": true,
    "isReady": false,
  },
  "rehydrated": false,
}
`;

exports[`Github should handle FETCH_POPULAR_REPOS_SUCCESS 1`] = `
Object {
  "popularRepos": Object {
    "data": Array [
      Object {
        "id": 1,
      },
    ],
    "error": false,
    "isLoading": false,
    "isReady": true,
  },
  "rehydrated": false,
}
`;

exports[`Github should handle persist/REHYDRATE with payload 1`] = `
Object {
  "logged": true,
  "popularRepos": Object {
    "data": Array [],
    "error": false,
    "isLoading": false,
    "isReady": false,
  },
  "rehydrated": true,
}
`;

exports[`Github should handle persist/REHYDRATE without payload 1`] = `
Object {
  "popularRepos": Object {
    "data": Array [],
    "error": false,
    "isLoading": false,
    "isReady": false,
  },
  "rehydrated": true,
}
`;

exports[`Github should return the initial state 1`] = `
Object {
  "popularRepos": Object {
    "data": Array [],
    "error": false,
    "isLoading": false,
    "isReady": false,
  },
  "rehydrated": false,
}
`;
